--- a/index.css
+++ b/index.css
@@ -1,9 +1,19 @@
 body {
-    background-image: url("station.jpg");
+    background-image: url("pexels-pixabay-433333\ \(2\).jpg");
     background-size: cover;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
+    height: 100vh;
+}
+
+.container {
+    background: white;
+    border: 5px solid black;
+    border-radius: 10px;
+    box-shadow: 0px 20px 20px black;
+    max-width: 80%;
+    margin: auto;
 }
 
 h1 {
@@ -24,14 +34,26 @@ button {
     color: white;
     font-weight: bold;
     width: 200px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 #increment-btn {
-    background: darkred;
+    background: red;
+    box-shadow: 0px 5px 6px black;
+}
+
+#increment-btn:active {
+    transform: scale(0.9);
 }
 
 #save-btn {
-    background: darkgreen;
+    background: orange;
+    box-shadow: 0px 5px 6px black;
+}
+
+#save-btn:active {
+    transform: scale(0.9);
 }
